--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Title -->
 
     <!-- Logo -->
-    <link rel="icon" href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\ISD_logo_withBG.png" type="image/icon type">
+    <link rel="icon" href="ISD_logo_withBG.png" type="image/icon type">
     <!-- Logo -->
 
     <!-- JQuery -->
@@ -96,9 +96,9 @@
 
           <!-- Overlay content -->
           <div class="overlay-content">
-            <a href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\index.html">Home</a>
-            <a href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\aboutus.html">About Us</a>
-            <a href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\gallery.html">Gallery</a>
+            <a href="index.html">Home</a>
+            <a href="aboutus.html">About Us</a>
+            <a href="gallery.html">Gallery</a>
             <a href="#"><span onclick="closeNav(),open_side_social_Nav()">Contact</span></a>
           </div>
         
@@ -131,7 +131,7 @@
         <!-- social side navbar -->
 
         <!-- Logo image -->
-        <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\ISD_logo_withBG.png" class="logo_image" alt="...">
+        <img src="ISD_logo_withBG.png" class="logo_image" alt="...">
         <!-- Logo image -->
 
         <!-- Unit name -->
