--- a/aboutus.html
+++ b/aboutus.html
@@ -30,7 +30,7 @@
     <!-- Title -->
 
     <!-- Logo -->
-    <link rel="icon" href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\ISD_logo_withBG.png" type="image/icon type">
+    <link rel="icon" href="ISD_logo_withBG.png" type="image/icon type">
     <!-- Logo -->
 
     <!-- JQuery -->
@@ -90,9 +90,9 @@
 
           <!-- Overlay content -->
           <div class="overlay-content">
-            <a href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\index.html">Home</a>
-            <a href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\aboutus.html">About Us</a>
-            <a href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\gallery.html">Gallery</a>
+            <a href="index.html">Home</a>
+            <a href="aboutus.html">About Us</a>
+            <a href="gallery.html">Gallery</a>
             <a href="#"><span onclick="closeNav(),open_side_social_Nav()">Contact</span></a>
           </div>
         
@@ -136,17 +136,17 @@
         <div class="col"></div>
         <div class="col-sm-12 col-md-6" id="paragraph_text">
           <p>
-            Welcome to Indian Spearhead Division (ISD), we are an Indian Arma 3 MilSim community. We are a semi-casual unit dedicated to 
-            having fun rather than achieving 100% realism. We hope to create a welcoming, non-toxic and friendly community of users who enjoy
+            Welcome to the Indian Spearhead Division (ISD), we are an Indian Arma 3 MilSim community. We are a semi-casual unit dedicated to 
+            having fun rather than achieving 100% realism. We hope to create a welcoming, non-toxic, and friendly community of users who enjoy
             playing the game together.
             <br><hr style="height: 0px;"> 
 
             ISD is the only public Indian Arma 3 Unit currently operating and was created to provide a space for players to play India-centric 
-            missions based on the Indian armed forces. It was created out of a need for missions at times that are comfortable to Indian players. 
-            Our missions are mainly fictional in nature.
+            missions based on the Indian armed forces. It was created out of a need for missions at times that are comfortable for Indian players. 
+            Our missions are mainly fictional.
             <br><hr style="height: 0px;"> 
 
-            We carry out a multitude of mission types with members learning new skills every mission. We do not exclusively look for experienced 
+            We carry out many mission types with members learning new skills every mission. We do not exclusively look for experienced 
             players, but welcome everybody. If you are interested in joining the unit, please visit
           </p>
         </div>
@@ -156,8 +156,8 @@
     <!-- Particles js -->
 
     <!-- Particles js -->
-    <script src="Particles js/particles.js"></script>
-    <script src="Particles js/app.js"></script>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
     <!-- Particles js -->
   </body>
 </html>
