--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
     <!-- Title -->
 
     <!-- Logo -->
-    <link rel="icon" href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\ISD_logo_withBG.png" type="image/icon type">
+    <link rel="icon" href="ISD_logo_withBG.png" type="image/icon type">
     <!-- Logo -->
 
     <!-- JQuery -->
@@ -88,9 +88,9 @@
 
           <!-- Overlay content -->
           <div class="overlay-content">
-            <a href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\index.html">Home</a>
-            <a href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\aboutus.html">About Us</a>
-            <a href="C:\Users\arnav\Documents\Main Workspace\ISD_Website\gallery.html">Gallery</a>
+            <a href="index.html">Home</a>
+            <a href="aboutus.html">About Us</a>
+            <a href="gallery.html">Gallery</a>
             <a href="#"><span onclick="closeNav(),open_side_social_Nav()">Contact</span></a>
           </div>
         
@@ -131,22 +131,22 @@
         <!-- Gallery -->
         <div class="row">
             <div class="column">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_1.png">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_3.png">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_5.png">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_7.png">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_9.png">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_11.png">
+              <img src="gallery_1.png">
+              <img src="gallery_3.png">
+              <img src="gallery_5.png">
+              <img src="gallery_7.png">
+              <img src="gallery_9.png">
+              <img src="gallery_11.png">
               <img src="">
 
             </div>
             <div class="column">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_2.png">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_4.png">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_6.png">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_8.png">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_10.png">
-              <img src="C:\Users\arnav\Documents\Main Workspace\ISD_Website\Images\gallery_12.png">
+              <img src="gallery_2.png">
+              <img src="gallery_4.png">
+              <img src="gallery_6.png">
+              <img src="gallery_8.png">
+              <img src="gallery_10.png">
+              <img src="gallery_12.png">
               <img src="">
         </div>
         <!-- Gallery -->
