--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Background effect -->
         <div  class="container-fluid" id="home_page_background_effect_container">
           <video autoplay loop muted plays-inline class="home_page_background_effect_video">
-            <source herf="https://drive.google.com/file/d/1xW_w2XYEEWUrOJsoUMD-o9SIqMX8KaVT/view?usp=drive_link" type="video/mp4">
+            <source src="Home_page_background_video.mp4" type="video/mp4">
           </video>
         </div>
         <!-- Background effect -->
